--- a/potluck-planner/package.json
+++ b/potluck-planner/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
